--- a/VirtualizingCanvas/VirtualCanvas/App.xaml
+++ b/VirtualizingCanvas/VirtualCanvas/App.xaml
@@ -1,6 +1,7 @@
-﻿<Application x:Class="VirtualizingCanvas.App"
+﻿<Application x:Class="VisualCanvasDemo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:VisualCanvasDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
